<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_chw_sync_status"
        android:enabled="true"
        android:orderInCategory="80"
        android:title="@string/reports_view_sync_status"
        android:icon="@drawable/reports_update"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_upload_to_dhis2"
        android:enabled="true"
        android:orderInCategory="90"
        android:title="@string/reports_upload_to_dhis2"
        android:icon="@drawable/reports_upload"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_view_dhis2_history"
        android:enabled="true"
        android:orderInCategory="95"
        android:title="@string/menu_view_dhis2_history"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_refresh"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/syncing"
        android:icon="@drawable/ic_icon_synchronize"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_print"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/print_report"
        android:icon="@drawable/ic_baseline_save_alt_24"
        app:showAsAction="ifRoom" />
</menu>
